apps/base/uptime/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uptime
  template:
    metadata:
      labels:
        app: uptime
        app.kubernetes.io/name: uptime
    spec:
      containers:
        - name: uptime
          image: "ghcr.io/louislam/uptime-kuma:2.5.6-slim"
          ports:
            - containerPort: 3001
          livenessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 10
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 10
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "125m"
              memory: "128Mi"
          volumeMounts:
            - mountPath: /app/data
              name: uptime-data
      volumes:
        - name: uptime-data
          persistentVolumeClaim:
            claimName: uptime-data
